fixed alignment on top right image

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul id="navbar-link">
                 <li><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl">Gmail</a></li>
                 <li><a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+                <li><img src="https://i.imgur.com/cbXHxfP.png" alt="google-grid-and-profile-icons"></li>
             </ul>
-            <img src="https://i.imgur.com/cbXHxfP.png" alt="google-grid-and-profile-icons">
         </div>
     </div>
 
